fix empty/missing entries

--- a/src/databases/kcat_data_Julia_reformat.ipynb
+++ b/src/databases/kcat_data_Julia_reformat.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg; Pkg.activate(\"../../.\")"
+    "using Pkg; Pkg.activate(\"../../.\")\n",
+    "Pkg.status()"
    ]
   },
   {
@@ -48,8 +49,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.ProteinSequences = [ ismissing(protseqs) ? missing : [ isnothing(seq) ? missing : seq for seq in protseqs] for protseqs in df.ProteinSequences]\n",
+    "df.ProteinSequences = [ ismissing(protseqs) ? missing : [ isnothing(seq) || isempty(seq) ? missing : seq for seq in protseqs] for protseqs in df.ProteinSequences]\n",
     "df.SubstrateSMILES = [ [ isnothing(seq) ? missing : seq for seq in smilesseqs] for smilesseqs in df.SubstrateSMILES];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[protseqs for protseqs in skipmissing(df.ProteinSequences)]"
    ]
   },
   {
@@ -106,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.3",
+   "display_name": "Julia 1.11.4",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -114,7 +124,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.3"
+   "version": "1.11.4"
   }
  },
  "nbformat": 4,
